[gd_scene load_steps=32 format=3 uid="uid://dtiikx4w6vkwn"]

[ext_resource type="Script" path="res://scenes/heart_level.gd" id="1_2io76"]
[ext_resource type="PackedScene" uid="uid://d18b8gy8y6nfl" path="res://maps/heart_map.tscn" id="1_n6bvx"]
[ext_resource type="PackedScene" uid="uid://bacxitw523mgg" path="res://entities/player.tscn" id="1_ol24k"]
[ext_resource type="PackedScene" uid="uid://d07e7av40yjvt" path="res://entities/stone.tscn" id="3_h1jfv"]
[ext_resource type="Texture2D" uid="uid://d1e56aeigpka1" path="res://assets/ui/UI Pack.png" id="3_p6vud"]
[ext_resource type="Texture2D" uid="uid://djj87xvkw2exb" path="res://assets/ui/AllButtons.png" id="4_emq32"]
[ext_resource type="PackedScene" uid="uid://b8a1yhkf5rqso" path="res://entities/white_cell.tscn" id="5_0fmnp"]
[ext_resource type="PackedScene" uid="uid://dt5gcj2pa2cpc" path="res://global/dialog_popup.tscn" id="5_ptxo0"]
[ext_resource type="PackedScene" uid="uid://cc2l1ks8shknq" path="res://entities/blood_cell.tscn" id="6_icmee"]
[ext_resource type="PackedScene" uid="uid://6bmcaphepj8x" path="res://entities/charger.tscn" id="7_ifs15"]
[ext_resource type="PackedScene" uid="uid://c70154gk5jebi" path="res://entities/big_stone.tscn" id="9_d13a4"]
[ext_resource type="LabelSettings" uid="uid://bxq8exieglrod" path="res://assets/fonts/Bars.tres" id="10_m4dqr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d04og"]
atlas = ExtResource("4_emq32")
region = Rect2(16, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1vgp"]
atlas = ExtResource("4_emq32")
region = Rect2(0, 160, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i5ed"]
atlas = ExtResource("4_emq32")
region = Rect2(0, 321, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_p372y"]
atlas = ExtResource("3_p6vud")
region = Rect2(873, 133, 32, 5)
margin = Rect2(2.815, 2.015, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ni82"]
atlas = ExtResource("3_p6vud")
region = Rect2(582, 131, 38, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_jehqw"]
atlas = ExtResource("3_p6vud")
region = Rect2(633, 133, 32, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_np327"]
atlas = ExtResource("3_p6vud")
region = Rect2(873, 149, 32, 5)
margin = Rect2(3, 2, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_dr5eq"]
atlas = ExtResource("3_p6vud")
region = Rect2(582, 147, 38, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyl4r"]
atlas = ExtResource("3_p6vud")
region = Rect2(633, 149, 32, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6gxy"]
atlas = ExtResource("3_p6vud")
region = Rect2(1072, 0, 32, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_swf13"]
atlas = ExtResource("3_p6vud")
region = Rect2(1040, 0, 32, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdv2f"]
atlas = ExtResource("3_p6vud")
region = Rect2(1008, 0, 32, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykagy"]
atlas = ExtResource("3_p6vud")
region = Rect2(976, 0, 32, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_xenqo"]
atlas = ExtResource("3_p6vud")
region = Rect2(944, 0, 32, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_arc0x"]
atlas = ExtResource("3_p6vud")
region = Rect2(912, 0, 32, 15)

[sub_resource type="SpriteFrames" id="SpriteFrames_b1ah6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6gxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swf13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdv2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykagy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xenqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arc0x")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_64bc2"]
atlas = ExtResource("3_p6vud")
region = Rect2(871, 118, 34, 5)
margin = Rect2(4, 3, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7gkj"]
atlas = ExtResource("3_p6vud")
region = Rect2(579, 83, 42, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfix6"]
atlas = ExtResource("3_p6vud")
region = Rect2(631, 118, 34, 5)

[node name="Heart Level" type="Node2D"]
script = ExtResource("1_2io76")

[node name="Backdrops" type="Node2D" parent="."]
position = Vector2(992, 537)

[node name="Background" type="ColorRect" parent="Backdrops"]
offset_left = -16005.0
offset_top = -7616.0
offset_right = 17765.0
offset_bottom = 8849.0
color = Color(0.25098, 0.027451, 0.027451, 1)

[node name="Red Path" type="ColorRect" parent="Backdrops"]
offset_left = -64.0
offset_top = 1999.0
offset_right = 1.0
offset_bottom = 2021.0
scale = Vector2(2.87416, 115.873)
color = Color(0.784314, 0.0823529, 0.0823529, 1)

[node name="Red Path2" type="ColorRect" parent="Backdrops"]
offset_left = -64.0
offset_top = 2000.0
offset_right = -57.0
offset_bottom = 2022.0
scale = Vector2(2.87416, 115.873)
color = Color(0.854902, 0.160784, 0.160784, 1)

[node name="Red Path3" type="ColorRect" parent="Backdrops"]
offset_left = 114.0
offset_top = 1994.0
offset_right = 119.0
offset_bottom = 2016.0
scale = Vector2(2.87416, 115.873)
color = Color(0.854902, 0.160784, 0.160784, 1)

[node name="Heart Map" parent="." instance=ExtResource("1_n6bvx")]
position = Vector2(992, 537)

[node name="Tutorial" type="Node2D" parent="."]
position = Vector2(11, 22)

[node name="Move" type="Label" parent="Tutorial"]
offset_left = 812.0
offset_top = 341.0
offset_right = 865.0
offset_bottom = 375.0
scale = Vector2(2, 2)
text = "MOVE"
label_settings = ExtResource("10_m4dqr")
horizontal_alignment = 1

[node name="Keys" type="Sprite2D" parent="Tutorial/Move"]
position = Vector2(26.5, 41)
texture = SubResource("AtlasTexture_d04og")

[node name="Keys2" type="Sprite2D" parent="Tutorial/Move"]
position = Vector2(26.5, 55)
texture = SubResource("AtlasTexture_b1vgp")

[node name="Shoot" type="Label" parent="Tutorial"]
offset_left = 963.0
offset_top = 341.0
offset_right = 1026.0
offset_bottom = 375.0
scale = Vector2(2, 2)
text = "SHOOT"
label_settings = ExtResource("10_m4dqr")
horizontal_alignment = 1

[node name="Mouse" type="Sprite2D" parent="Tutorial/Shoot"]
position = Vector2(29, 47)
scale = Vector2(1.5, 1.5)
texture = SubResource("AtlasTexture_8i5ed")

[node name="Tutorial" type="Timer" parent="Tutorial"]
wait_time = 20.0
one_shot = true
autostart = true

[node name="Objects" type="Node" parent="."]

[node name="Stone" parent="Objects" instance=ExtResource("3_h1jfv")]
position = Vector2(-117, 917)
rotation = 0.616177
scale = Vector2(4.2641, 4.2641)

[node name="Stone2" parent="Objects" instance=ExtResource("3_h1jfv")]
position = Vector2(741, 1673)
rotation = -0.441536
scale = Vector2(2.77331, 2.77331)

[node name="Stone3" parent="Objects" instance=ExtResource("3_h1jfv")]
position = Vector2(-294, -191)
rotation = -2.16177
scale = Vector2(2.3308, 2.3308)

[node name="Stone4" parent="Objects" instance=ExtResource("3_h1jfv")]
position = Vector2(666, -964)
rotation = -0.545052
scale = Vector2(2.48112, 2.48112)

[node name="Stone5" parent="Objects" instance=ExtResource("3_h1jfv")]
position = Vector2(867, -465)
rotation = 0.0981925
scale = Vector2(4, 4)

[node name="Stone6" parent="Objects" instance=ExtResource("3_h1jfv")]
position = Vector2(2697, 1453)
rotation = 1.46547
scale = Vector2(4.05549, 4.05549)

[node name="Stone7" parent="Objects" instance=ExtResource("3_h1jfv")]
position = Vector2(2053, 1400)
rotation = -0.385992
scale = Vector2(5.65318, 5.65318)

[node name="Stone8" parent="Objects" instance=ExtResource("3_h1jfv")]
position = Vector2(2314, -220)
rotation = 0.258105
scale = Vector2(6.82099, 6.82099)

[node name="Big Stone" parent="Objects" instance=ExtResource("9_d13a4")]
position = Vector2(1024, 1090)
scale = Vector2(2.5, 2.5)

[node name="Pick Ups" type="Node" parent="."]

[node name="White Cell" parent="Pick Ups" instance=ExtResource("5_0fmnp")]
position = Vector2(138, 2270)
scale = Vector2(0.2, 0.2)

[node name="White Cell2" parent="Pick Ups" instance=ExtResource("5_0fmnp")]
position = Vector2(-698, -1013)
scale = Vector2(0.2, 0.2)

[node name="White Cell3" parent="Pick Ups" instance=ExtResource("5_0fmnp")]
position = Vector2(2123, -1195)
scale = Vector2(0.2, 0.2)

[node name="White Cell4" parent="Pick Ups" instance=ExtResource("5_0fmnp")]
position = Vector2(1917, 599)
scale = Vector2(0.2, 0.2)

[node name="White Cell5" parent="Pick Ups" instance=ExtResource("5_0fmnp")]
position = Vector2(2534, 2245)
scale = Vector2(0.2, 0.2)

[node name="Blood Cell" parent="Pick Ups" groups=["Blood Cells"] instance=ExtResource("6_icmee")]
position = Vector2(-594, 2422)
scale = Vector2(0.2, 0.2)

[node name="Blood Cell2" parent="Pick Ups" groups=["Blood Cells"] instance=ExtResource("6_icmee")]
position = Vector2(1746, -390)
scale = Vector2(0.2, 0.2)

[node name="Blood Cell3" parent="Pick Ups" groups=["Blood Cells"] instance=ExtResource("6_icmee")]
position = Vector2(-112, -638)
scale = Vector2(0.2, 0.2)

[node name="Enemies" type="Node" parent="."]

[node name="Charger" parent="Enemies" instance=ExtResource("7_ifs15")]
position = Vector2(-712, 948)

[node name="Charger2" parent="Enemies" instance=ExtResource("7_ifs15")]
position = Vector2(-457, 1322)

[node name="Charger3" parent="Enemies" instance=ExtResource("7_ifs15")]
position = Vector2(-510, -902)

[node name="Charger4" parent="Enemies" instance=ExtResource("7_ifs15")]
position = Vector2(2133, -1019)

[node name="Charger5" parent="Enemies" instance=ExtResource("7_ifs15")]
position = Vector2(1952, 721)

[node name="Charger6" parent="Enemies" instance=ExtResource("7_ifs15")]
position = Vector2(409, 2202)

[node name="Charger7" parent="Enemies" instance=ExtResource("7_ifs15")]
position = Vector2(2250, 2240)

[node name="Charger8" parent="Enemies" instance=ExtResource("7_ifs15")]
position = Vector2(2716, 2131)

[node name="Charger9" parent="Enemies" instance=ExtResource("7_ifs15")]
position = Vector2(580, 1280)

[node name="Charger10" parent="Enemies" instance=ExtResource("7_ifs15")]
position = Vector2(1018, -1299)

[node name="Charger11" parent="Enemies" instance=ExtResource("7_ifs15")]
position = Vector2(-891, 321)

[node name="Charger12" parent="Enemies" instance=ExtResource("7_ifs15")]
position = Vector2(2808, 371)

[node name="Charger13" parent="Enemies" instance=ExtResource("7_ifs15")]
position = Vector2(2819, -1097)

[node name="Player" parent="." instance=ExtResource("1_ol24k")]
top_level = true
visibility_layer = 3
position = Vector2(954, 532)
scale = Vector2(2, 2)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Progress Bars" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HP" type="TextureProgressBar" parent="CanvasLayer/Progress Bars"]
layout_mode = 0
offset_left = 24.0
offset_top = 18.0
offset_right = 62.0
offset_bottom = 29.0
scale = Vector2(5, 5)
value = 100.0
texture_under = SubResource("AtlasTexture_p372y")
texture_over = SubResource("AtlasTexture_1ni82")
texture_progress = SubResource("AtlasTexture_jehqw")
texture_progress_offset = Vector2(3.015, 2)

[node name="Label" type="Label" parent="CanvasLayer/Progress Bars/HP"]
layout_mode = 0
offset_left = 38.0
offset_top = -3.2
offset_right = 128.0
offset_bottom = 30.8
scale = Vector2(0.5, 0.5)
text = "HULL"
label_settings = ExtResource("10_m4dqr")
horizontal_alignment = 1

[node name="Oxigen" type="TextureProgressBar" parent="CanvasLayer/Progress Bars"]
layout_mode = 0
offset_left = 24.0
offset_top = 93.0
offset_right = 62.0
offset_bottom = 104.0
scale = Vector2(5, 5)
max_value = 600.0
value = 600.0
texture_under = SubResource("AtlasTexture_np327")
texture_over = SubResource("AtlasTexture_dr5eq")
texture_progress = SubResource("AtlasTexture_eyl4r")
texture_progress_offset = Vector2(3, 2)

[node name="Label" type="Label" parent="CanvasLayer/Progress Bars/Oxigen"]
layout_mode = 0
offset_left = 38.0
offset_top = -3.6
offset_right = 128.0
offset_bottom = 30.4
scale = Vector2(0.5, 0.5)
text = "OXIGEN"
label_settings = ExtResource("10_m4dqr")
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="CanvasLayer/Progress Bars/Oxigen"]
autostart = true

[node name="WB Cell Counter" type="AnimatedSprite2D" parent="CanvasLayer/Progress Bars"]
position = Vector2(117, 191)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_b1ah6")

[node name="Infection" type="TextureProgressBar" parent="CanvasLayer/Progress Bars"]
layout_mode = 0
offset_left = 1695.0
offset_top = 18.0
offset_right = 1735.0
offset_bottom = 29.0
scale = Vector2(5, 5)
value = 100.0
fill_mode = 1
texture_under = SubResource("AtlasTexture_64bc2")
texture_over = SubResource("AtlasTexture_b7gkj")
texture_progress = SubResource("AtlasTexture_qfix6")
texture_progress_offset = Vector2(4, 3)

[node name="Label" type="Label" parent="CanvasLayer/Progress Bars/Infection"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -106.2
offset_top = -3.0
offset_right = 52.8
offset_bottom = 31.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
text = "INFECTION"
label_settings = ExtResource("10_m4dqr")
horizontal_alignment = 1

[node name="Dialog Popup" parent="CanvasLayer" instance=ExtResource("5_ptxo0")]
visible = false
offset_left = 328.0
offset_top = 733.0
offset_right = -885.0
offset_bottom = -115.0
scale = Vector2(1.68, 1.68)

[connection signal="timeout" from="Tutorial/Tutorial" to="." method="_on_tutorial_timeout"]
[connection signal="body_entered" from="Objects/Big Stone/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="picked_up" from="Pick Ups/White Cell" to="." method="_on_white_cell_picked_up"]
[connection signal="picked_up" from="Pick Ups/White Cell2" to="." method="_on_white_cell_2_picked_up"]
[connection signal="picked_up" from="Pick Ups/White Cell3" to="." method="_on_white_cell_3_picked_up"]
[connection signal="picked_up" from="Pick Ups/White Cell4" to="." method="_on_white_cell_4_picked_up"]
[connection signal="picked_up" from="Pick Ups/White Cell5" to="." method="_on_white_cell_5_picked_up"]
[connection signal="health_full" from="Pick Ups/Blood Cell" to="." method="_on_blood_cell_health_full"]
[connection signal="health_full" from="Pick Ups/Blood Cell2" to="." method="_on_blood_cell_2_health_full"]
[connection signal="health_full" from="Pick Ups/Blood Cell3" to="." method="_on_blood_cell_3_health_full"]
[connection signal="timeout" from="CanvasLayer/Progress Bars/Oxigen/Timer" to="." method="_on_timer_timeout"]

[editable path="Objects/Big Stone"]
